[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Level_0.gd" type="Script" id=1]
[ext_resource path="res://Assets/img/Ground.png" type="Texture" id=2]
[ext_resource path="res://Assets/img/DownGround.png" type="Texture" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/EnemySpawner.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 160, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 38.5, 68.5 )

[node name="Level_0" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Ground" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 320, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Ground"]
position = Vector2( 159, 116 )
texture = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 12, 112 )

[node name="DownGround" type="Sprite" parent="."]
position = Vector2( 159, 132 )
scale = Vector2( 20, 1 )
texture = ExtResource( 3 )

[node name="EnemySpawner" parent="." instance=ExtResource( 5 )]
position = Vector2( 268, 92 )

[node name="PhysicGround" type="StaticBody2D" parent="."]
position = Vector2( 160, 133 )
collision_mask = 0
constant_linear_velocity = Vector2( -32, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhysicGround"]
position = Vector2( -1, -14 )
shape = SubResource( 2 )

[node name="MataSobras5000" type="Area2D" parent="."]
position = Vector2( -42, 72 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MataSobras5000"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_exited" from="MataSobras5000" to="." method="_on_MataSobras5000_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
